objects/SLC_Expense__c.object
<CustomObject>
    <fields>
        <fullName>SLC_DateDeclarationReceived__c</fullName>
        <description>Sets date when the declaration is marked as completed</description>
        <label>Date Declaration Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_DateOfExpense__c</fullName>
        <description>Indicates date on which expenditure was incurred by STANLIB employee</description>
        <label>Date of Expense</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_DeclarationCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Completed once declaration is uploaded and marked as completed on Expense</description>
        <label>Declaration Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLC_DeclarationRequired__c</fullName>
        <description>A declaration is required if the Monetary Value per Person is greater than R500</description>
        <formula>SLC_MonetaryValuePerIndividual__c &gt;= 500</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Declaration Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLC_DetailsOfNonClientsReceivingGift__c</fullName>
        <description>Allows BDM/CFM to record name, surname, role and other FSCA regulatory details of non-clients who benefitted from the expenditure incurred by the STANLIB Employee.</description>
        <label>Details of Non-Clients Receiving Gift</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLC_ExpenseName__c</fullName>
        <description>Captures a memorable description of the Expense as the Expense Name.</description>
        <label>Expense Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_IsExpenseOwnerLoggedInUser__c</fullName>
        <description>Checks is StanlibEmployee is the logged in user for &apos;My Expenses&apos; List View</description>
        <formula>SLC_StanlibEmployee__c == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Expense Owner Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLC_MonetaryValuePerIndividual__c</fullName>
        <description>Calculated value of Expense Split between related individuals.</description>
        <label>Monetary Value per Person</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLC_NatureOfExpense__c</fullName>
        <description>Description of what the expenditure incurred by STANLIB Employee entailed, eg. &apos;Client lunch&apos;</description>
        <label>Nature of Expense</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SLC_NatureOfExpense</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_NumberOfClients__c</fullName>
        <description>Indicates how many people who have a client relationship with STANLIB have benefitted from the expenditure incurred by the STANLIB Employee.</description>
        <label>Number of Clients</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_NumberOfPeople__c</fullName>
        <description>Indicates how many people have benefitted from the expenditure incurred by the STANLIB Employee. Includes non-clients.</description>
        <label>Number of People</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_StanlibEmployee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name and surname of person who incurred expenditure on behalf of STANLIB.</description>
        <label>STANLIB Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_TotalExpenseAmount__c</fullName>
        <description>Rand value of total expenditure incurred by STANLIB employee on behalf of STANLIB.</description>
        <label>Total Expense Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SLC_StanlibEmployee__c</columns>
        <columns>SLC_ExpenseName__c</columns>
        <columns>SLC_NatureOfExpense__c</columns>
        <columns>SLC_TotalExpenseAmount__c</columns>
        <columns>SLC_DateOfExpense__c</columns>
        <columns>SLC_NumberOfClients__c</columns>
        <columns>SLC_NumberOfPeople__c</columns>
        <columns>SLC_MonetaryValuePerIndividual__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLC_MyExpenses</fullName>
        <columns>NAME</columns>
        <columns>SLC_ExpenseName__c</columns>
        <columns>SLC_DateOfExpense__c</columns>
        <columns>SLC_TotalExpenseAmount__c</columns>
        <columns>SLC_NatureOfExpense__c</columns>
        <columns>SLC_NumberOfPeople__c</columns>
        <columns>SLC_NumberOfClients__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLC_IsExpenseOwnerLoggedInUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Expenses</label>
    </listViews>
    <nameField>
        <displayFormat>EXP-{000000}</displayFormat>
        <label>Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <recordTypes>
        <fullName>SLC_Expense</fullName>
        <active>true</active>
        <description>Stanlib Expense</description>
        <label>Expense</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>